Use record for event filter